--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter_neumorphic: ^3.2.0
   flutter_screenutil:
   flutter_spinkit: ^5.1.0
-
+  syncfusion_flutter_datepicker: ^20.2.36
   flutter:
     sdk: flutter
 
